[tool.poetry]
name = "url-shortener"
description = "URL shortening service"
version = "0.1"
authors = ["Vladimir Ryabtsev"]

[tool.poetry.dependencies]
python = "^3.8"
asynctnt = "=1.2"
aioredis = "=1.3.1"
aiocache = "=0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-asyncio = "^0.14"
aiohttp = "=3.6.2"